--- a/git_practice.html
+++ b/git_practice.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Git Practice</title>
 </head>
 <body>
-
+<h1>This is the Winter Cohort's Practice with Git and GitHub</h1>
 </body>
 </html>
