--- a/git_practice.html
+++ b/git_practice.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1>This is the Winter Cohort's Practice with Git and GitHub</h1>
+<p>Awesome way to keept track!</p>
 </body>
 </html>
